2013-02-25  Ken Kania  <kkania@chromium.org>

        Remove browser patching mechanism for handling javascript dialogs in chromium port
        https://bugs.webkit.org/show_bug.cgi?id=110531

        Reviewed by Pavel Feldman.

        * public/WebDevToolsAgent.h:
        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::handleJavaScriptDialog):
        (WebKit::browserHintToString):
        (WebKit::browserHintFromString):
        (WebKit::WebDevToolsAgent::patchWithBrowserData):

2013-02-25  James Robinson  <jamesr@chromium.org>

        [chromium] Plumb WebViewImpl's compositor scheduling suppression out to WebWidgetClient
        https://bugs.webkit.org/show_bug.cgi?id=110640

        Reviewed by Adrienne Walker.

        This plumbs the WebViewImpl::m_suppressInvalidations logic out to the WebWidgetClient so
        it can be implemented by the embedder. The existing logic is left in place for now,
        once the embedder side has landed WebViewImpl will be purely a pass-through.

        * public/WebWidgetClient.h:
        (WebWidgetClient):
        (WebKit::WebWidgetClient::suppressCompositorScheduling):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::suppressInvalidations):
        (WebKit::WebViewImpl::setRootGraphicsLayer):

2013-02-25  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r143936.
        http://trac.webkit.org/changeset/143936
        https://bugs.webkit.org/show_bug.cgi?id=110789

        Causes webkit_unit_tests failures on android dbg (Requested by
        vollick on #webkit).

        * WebKit.gyp:
        * WebKit.gypi:
        * tests/GIFImageDecoderTest.cpp: Removed.
        * tests/data/broken.gif: Removed.

2013-02-25  Alpha Lam  <hclam@chromium.org>

        GIFImageReader to read from source data directly
        https://bugs.webkit.org/show_bug.cgi?id=109662

        Reviewed by Stephen White.
